// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingSheet Snapshots renders correctly with createWallet=false (import mode) 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "bottom": 0,
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#0a0d135c",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      collapsable={false}
      enabled={true}
      handlerTag={-1}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#b4b4b566",
            "borderTopLeftRadius": 24,
            "borderTopRightRadius": 24,
            "borderWidth": 1,
            "maxHeight": 0,
            "overflow": "hidden",
            "paddingBottom": 0,
            "shadowColor": "#0000001a",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 40,
          },
          {
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "padding": 4,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#b4b4b566",
              "borderRadius": 2,
              "height": 4,
              "width": 40,
            }
          }
        />
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
              "rowGap": 16,
            },
            undefined,
          ]
        }
        testID="onboarding-sheet"
      >
        <View
          style={
            [
              {
                "display": "flex",
                "flexDirection": "column",
                "gap": 16,
                "justifyContent": "flex-end",
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#131416",
                "borderColor": "#b4b4b566",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="onboarding-sheet-google-login-button-id"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
            >
              <SvgMock
                fill="currentColor"
                height={24}
                name="google"
                width={24}
              />
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                Sign in with Google
              </Text>
            </View>
          </TouchableOpacity>
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#131416",
                "borderColor": "#b4b4b566",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="onboarding-sheet-apple-login-button-id"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
            >
              <SvgMock
                fill="currentColor"
                height={24}
                name="apple-white"
                width={24}
              />
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                Sign in with Apple
              </Text>
            </View>
          </TouchableOpacity>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 10,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#b4b4b566",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "height": 1,
                },
                undefined,
              ]
            }
          />
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#babbbe",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 20,
                  "fontWeight": 500,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                },
                undefined,
              ]
            }
          >
            or
          </Text>
          <View
            style={
              [
                {
                  "backgroundColor": "#b4b4b566",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "height": 1,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "display": "flex",
                "flexDirection": "column",
                "gap": 16,
                "justifyContent": "flex-end",
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#b4b4b528",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="onboarding-sheet-import-seed-button-id"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Import using Secret Recovery Phrase
            </Text>
          </TouchableOpacity>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "marginTop": 24,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 12,
                  "fontWeight": 400,
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                {
                  "textAlign": "center",
                },
              ]
            }
          >
            By continuing, you agree to MetaMask's
             
            <Text
              accessibilityRole="text"
              onPress={[Function]}
              style={
                [
                  {
                    "color": "#4459ff",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 12,
                    "fontWeight": 400,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  },
                  undefined,
                ]
              }
              testID="terms-of-use-link"
            >
              Terms of use
            </Text>
             
            and
             
            <Text
              accessibilityRole="text"
              onPress={[Function]}
              style={
                [
                  {
                    "color": "#4459ff",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 12,
                    "fontWeight": 400,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  },
                  undefined,
                ]
              }
              testID="privacy-notice-link"
            >
              Privacy notice
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`OnboardingSheet Snapshots renders correctly with createWallet=true (create mode) 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "bottom": 0,
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#0a0d135c",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      collapsable={false}
      enabled={true}
      handlerTag={-1}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#b4b4b566",
            "borderTopLeftRadius": 24,
            "borderTopRightRadius": 24,
            "borderWidth": 1,
            "maxHeight": 0,
            "overflow": "hidden",
            "paddingBottom": 0,
            "shadowColor": "#0000001a",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 40,
          },
          {
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "padding": 4,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#b4b4b566",
              "borderRadius": 2,
              "height": 4,
              "width": 40,
            }
          }
        />
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
              "rowGap": 16,
            },
            undefined,
          ]
        }
        testID="onboarding-sheet"
      >
        <View
          style={
            [
              {
                "display": "flex",
                "flexDirection": "column",
                "gap": 16,
                "justifyContent": "flex-end",
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#131416",
                "borderColor": "#b4b4b566",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="onboarding-sheet-google-login-button-id"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
            >
              <SvgMock
                fill="currentColor"
                height={24}
                name="google"
                width={24}
              />
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                Continue with Google
              </Text>
            </View>
          </TouchableOpacity>
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#131416",
                "borderColor": "#b4b4b566",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="onboarding-sheet-apple-login-button-id"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
            >
              <SvgMock
                fill="currentColor"
                height={24}
                name="apple-white"
                width={24}
              />
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                Continue with Apple
              </Text>
            </View>
          </TouchableOpacity>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 10,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#b4b4b566",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "height": 1,
                },
                undefined,
              ]
            }
          />
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#babbbe",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 20,
                  "fontWeight": 500,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                },
                undefined,
              ]
            }
          >
            or
          </Text>
          <View
            style={
              [
                {
                  "backgroundColor": "#b4b4b566",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "height": 1,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "display": "flex",
                "flexDirection": "column",
                "gap": 16,
                "justifyContent": "flex-end",
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#b4b4b528",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="onboarding-sheet-import-seed-button-id"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Use Secret Recovery Phrase
            </Text>
          </TouchableOpacity>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "marginTop": 24,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 12,
                  "fontWeight": 400,
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                {
                  "textAlign": "center",
                },
              ]
            }
          >
            By continuing, you agree to MetaMask's
             
            <Text
              accessibilityRole="text"
              onPress={[Function]}
              style={
                [
                  {
                    "color": "#4459ff",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 12,
                    "fontWeight": 400,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  },
                  undefined,
                ]
              }
              testID="terms-of-use-link"
            >
              Terms of use
            </Text>
             
            and
             
            <Text
              accessibilityRole="text"
              onPress={[Function]}
              style={
                [
                  {
                    "color": "#4459ff",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 12,
                    "fontWeight": 400,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  },
                  undefined,
                ]
              }
              testID="privacy-notice-link"
            >
              Privacy notice
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
